--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <!-- help support -->
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>{% block title%}{% endblock %}</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-      <link rel="stylesheet" href="../static/css/style.css">
-      {% block css %}{% endblock %}
-      {% block js %}{% endblock %}
-  </head>
-  <body>
-      <nav>
-          <ul>
-              <li><a href="/home">Home</a></li>
-              <li><a href="/clue">Clue Organizer</a></li>
-              <li><a href="/people">People Tracker</a></li>
-              <li><a href="/timeline">Timeline</a></li>
-              <li><a href="/search">Search</a></li>
-              <li><a href="/profile">Profile</a></li>
-              <li><a href="/logout">Log Out</a></li>
-              <li>
-                  <div class="switch" id="icon">
-                      <img src="../static/images/dark_light_switch.svg" alt="">
-                  </div>
-              </li>
-          </ul>
-      </nav>
-      <div class="flash">
-          {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                {% endfor %}
-            {% endif %}
-          {% endwith %}
-    
-          {% block body %}{% endblock %}
-      </div>
-  </body>
+
+<head>
+    <!-- help support -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title%}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../static/css/style.css">
+    {% block css %}{% endblock %}
+    {% block js %}{% endblock %}
+</head>
+
+<body>
+    <div class="toggler" id="svg-toggler">
+        <img src="../static/images/menu-symbol-of-three-parallel-lines-svgrepo-com.svg" alt="">
+    </div>
+    <nav id="navbar">
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/clue">Clue Organizer</a></li>
+            <li><a href="/people">People Tracker</a></li>
+            <li><a href="/timeline">Timeline</a></li>
+            <li><a href="/search">Search</a></li>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/logout">Log Out</a></li>
+            <li>
+                <div class="switch" id="icon">
+                    <img src="../static/images/dark_light_switch.svg" alt="">
+                </div>
+            </li>
+        </ul>
+    </nav>
+    <div class="flash">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+
+        {% block body %}{% endblock %}
+    </div>
+    <script>
+        document.getElementById('svg-toggler').addEventListener('click', function () {
+            var navbar = document.getElementById('navbar');
+            navbar.classList.toggle('show');
+        });
+
+    </script>
+</body>
+
 </html>
