Made changes in clue organizer frontend

--- a/templates/clue.html
+++ b/templates/clue.html
@@ -17,13 +17,12 @@
             </div>
         </div>
         <div class="heading">Write your clues here: </div>
-        <!-- category selection -->
         <p>Choose from the following categories:</p>
         <select id="clue" name="category" required>
             <option disabled selected>Select</option>
             <option value="person">Person</option>
-            <option value="photo">Photo</option>
-            <option value="video">Video</option>
+            <option value="place">Place</option>
+            <option value="file">File</option>
             <option value="footprints">Footprints</option>
             <option value="object">Object</option>
         </select>
