Fixed clue form submission

--- a/templates/clue.html
+++ b/templates/clue.html
@@ -12,14 +12,13 @@
             <div class="dateIn">
                 <div>Select the date: </div>
                 <div>
-                    <input type="date" id="date" name="date" required>
+                    <input type="date" id="date" name="date">
                 </div>
             </div>
         </div>
         <div class="heading">Write your clues here: </div>
         <p>Choose from the following categories:</p>
-        <select id="clue" name="category" required>
-            <option disabled selected>Select</option>
+        <select id="clue" name="category">
             <option value="person">Person</option>
             <option value="place">Place</option>
             <option value="file">File</option>
@@ -27,7 +26,7 @@
             <option value="object">Object</option>
         </select>
         <div class="texteditor">
-            <textarea name="description" id="editor" cols="30" rows="10" required></textarea>
+            <textarea name="description" id="editor" cols="30" rows="10"></textarea>
         </div>
         <div class="save">
             <div class="btn">
