--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@
 html{
     scroll-behavior: smooth;
 }
+
 a{
     text-decoration: none;
     color: var(--nav_text);
@@ -46,6 +47,9 @@ li{
             display: flex;
             flex-direction: column;
         }
+    }
+    .alert{
+        font-size: 15px;
     }
 
 }
@@ -97,6 +101,9 @@ nav{
     position: absolute;
     z-index: 1000;
     width: 100vw;
+    font-family: sans-serif;
+    background-color: white;
+    color: black;
 }
 ul{
     display: flex;
