--- a/static/css/clue.css
+++ b/static/css/clue.css
@@ -30,6 +30,12 @@
     display: flex;
     flex-direction: column;
   }
+  .heading{
+    padding-left: 0;
+  }
+  p{
+    padding-left: 0;
+  }
 }
 body{
     color: var(--text);
